# fuel-dis

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pull-request.yml
.trunk/: trunk.yaml
src/: asm.rs  colorscheme.rs  consts.rs  error.rs  main.rs  markup.rs
src/asm/: analysis.rs  disasm.rs
