[package]
description = "A pretty disassembler for Fuel VM bytecode."
edition = "2021"
license-file = "LICENSE"
name = "forc-dis"
repository = "https://github.com/otrho/fuel-dis/"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2"
fuel-asm = "0.9"
toml = "0.5"
